# NewsLookout

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  __init__.py  convert_archive_to_zip.py  data_structs.py  network.py  newslookout.cmd  newslookout.sh  pyproject.toml  queue_manager.py  requirements.txt  run_newslookout.cmd  scraper_app.py  scraper_utils.py  setup.cfg  test_scraper_app.py  worker.py
.github/workflows/: .coveragerc  codeql-analysis.yml  python-app.yml  python-publish.yml
conf/: newslookout.conf  newslookout.conf.template  requirements.txt  scraper.conf
data/: completed_urls.db
data/2014-06-24/: mod_en_in_ecotimes_35945669.html.bz2  mod_en_in_ecotimes_35945669.json
data/2018-03-22/: mod_en_in_inexp_business_1790722.html.bz2  mod_en_in_inexp_business_1790722.json
data/2019-10-07/: mod_en_in_ecotimes_71473422.html.bz2  mod_en_in_ecotimes_71473422.json  mod_en_in_ecotimes_71474039.html.bz2  mod_en_in_ecotimes_71474039.json  mod_en_in_ecotimes_71476793.html.bz2  mod_en_in_ecotimes_71476793.json  mod_en_in_ecotimes_71477242.html.bz2  mod_en_in_ecotimes_71477242.json
data/master_data/: mod_in_nse_DEBT.csv  mod_in_nse_EQUITY_L.csv  mod_in_nse_PREF.csv  mod_in_nse_Redmn_Def_Web.csv  mod_in_nse_SME_EQUITY_L.csv  mod_in_nse_WARRANT.csv  mod_in_nse_eq_etfseclist.csv  mod_in_nse_namechange.csv  mod_in_nse_symbolchange.csv
docker/: Dockerfile  README.md  docker-compose.yml  newslookout_docker.conf
models/: install-models.md
models/bert_models/: config.json
newslookout/: __init__.py  app_status_ui.js  archive_writer.py  base_plugin.py  config.py  dashboard.html  data_structs.py  network.py  news_event.py  queue_manager.py  scraper_app.py  scraper_utils.py  session_hist.py  worker.py
newslookout/plugins/: __init__.py  mod_dataprep.py  mod_dedupe.py  mod_en_in_business_std.py  mod_en_in_ecotimes.py  mod_en_in_forbes.py  mod_en_in_hindu.py  mod_en_in_indiakanoon.py  mod_en_in_inexp_business.py  mod_en_in_livemint.py  mod_en_in_moneycontrol.py  mod_en_in_ndtv.py  mod_en_in_timesofindia.py  mod_en_in_trak.py  mod_eventclass.py  mod_in_bse.py  mod_in_gdelt.py  mod_in_nse.py  mod_json_to_csv.py  mod_keywordflags.py  mod_solrsubmit.py
newslookout/plugins_contrib/: template_for_plugin.py
plugins/: __init__.py  baseModule.py  base_plugin.py  mod_dedupe.py  mod_en_in_business_std.py  mod_en_in_ecotimes.py  mod_en_in_forbes.py  mod_en_in_hindu.py  mod_en_in_indiakanoon.py  mod_en_in_inexp_business.py  mod_en_in_livemint.py  mod_en_in_moneycontrol.py  mod_en_in_ndtv.py  mod_en_in_timesofindia.py  mod_en_in_trak.py  mod_in_bse.py  mod_in_nse.py  template_for_plugin.py
plugins_contrib/: template_for_plugin.py
src/: __init__.py  base_plugin.py  config.py  data_structs.py  network.py  news_event.py  queue_manager.py  scraper_app.py  scraper_utils.py  session_hist.py  worker.py
src/newslookout/: __init__.py  archive_writer.py  base_plugin.py  config.py  dashboard.html  data_structs.py  network.py  news_event.py  queue_manager.py  scraper_app.py  scraper_utils.py  session_hist.py  worker.py
src/newslookout/plugins/: mod_dataprep.py  mod_dedupe.py  mod_en_in_business_std.py  mod_en_in_ecotimes.py  mod_en_in_forbes.py  mod_en_in_hindu.py  mod_en_in_indiakanoon.py  mod_en_in_inexp_business.py  mod_en_in_livemint.py  mod_en_in_moneycontrol.py  mod_en_in_ndtv.py  mod_en_in_timesofindia.py  mod_en_in_trak.py  mod_eventclass.py  mod_in_bse.py  mod_in_gdelt.py  mod_in_nse.py  mod_json_to_csv.py  mod_keywordflags.py  mod_solrsubmit.py
src/newslookout/plugins_contrib/: template_for_plugin.py
src/plugins/: __init__.py  mod_dataprep.py  mod_dedupe.py  mod_en_in_business_std.py  mod_en_in_ecotimes.py  mod_en_in_forbes.py  mod_en_in_hindu.py  mod_en_in_indiakanoon.py  mod_en_in_inexp_business.py  mod_en_in_livemint.py  mod_en_in_moneycontrol.py  mod_en_in_ndtv.py  mod_en_in_timesofindia.py  mod_en_in_trak.py  mod_eventclass.py  mod_in_bse.py  mod_in_gdelt.py  mod_in_nse.py  mod_keywordflags.py
src/plugins_contrib/: template_for_plugin.py
test/: __init__.py  conftest.py  test_base_plugin.py  test_data_structs.py  test_mod_dataprep.py  test_mod_dedupe.py  test_mod_en_in_business_std.py  test_mod_en_in_ecotimes.py  test_mod_en_in_forbes.py  test_mod_en_in_hindu.py  test_mod_en_in_indiakanoon.py  test_mod_en_in_inexp_business.py  test_mod_en_in_livemint.py  test_mod_en_in_moneycontrol.py  test_mod_en_in_ndtv.py  test_mod_en_in_timesofindia.py  test_mod_en_in_trak.py  test_mod_eventclass.py  test_mod_in_bse.py  test_mod_in_gdelt.py  test_mod_in_nse.py  test_mod_keywordflags.py  test_network.py  test_news_event.py  test_queue_manager.py  test_scraper_app.py  test_scraper_utils.py  test_session_hist.py  test_worker.py
test-data/: flag_keywords_test_sentences.txt  mod_en_in_business_std_119011800410.html.bz2  mod_en_in_business_std_120040100086.html.bz2  mod_en_in_business_std_rss.xml  mod_en_in_ecotimes_73837853.html.bz2  mod_en_in_ecotimes_rss.xml  mod_en_in_forbes_69073.html.bz2  mod_en_in_forbes_mainurl.html.bz2  mod_en_in_forbes_rss.xml  mod_en_in_hindu_30713792.html.bz2  mod_en_in_hindu_rss.xml  mod_en_in_indiakanoon_49865912.html.bz2  mod_en_in_indiakanoon_rss.xml  mod_en_in_inexp_business_2238510.html.bz2  mod_en_in_inexp_business_rss.xml  mod_en_in_livemint_11613646112891.html.bz2  mod_en_in_livemint_rss.xml  mod_en_in_moneycontrol_6541471.html.bz2  mod_en_in_moneycontrol_rss.xml  mod_en_in_ndtv_2373245.html.bz2  mod_en_in_ndtv_rss.xml  mod_en_in_timesofindia_0xa2097d6c.html.bz2  mod_en_in_timesofindia_rss.xml  mod_en_in_trak_119735.html.bz2  mod_en_in_trak_rss.xml  newslookout_test.conf  test_readFromJSON.json
