[metadata]
name = NewsLookout
version = 1.8.5
author = Sandeep Singh Sandhu
author_email = sandeep.sandhu@gmx.com
maintainer = Sandeep Singh Sandhu
description = News scraping application
long_description = The NewsLookout web scraping application for financial events.  Scalable, modular and configurable multi-threaded python console application. The application is readily extended by adding custom modules via its 'plugin' architecture for additional news sources,  custom data pre-processing and NLP based news text analytics  (e.g. entity recognition, negative event classification, economy trends, industry trends, etc.). For more details, refer to https://github.com/sandeep-sandhu/NewsLookout
url = https://github.com/sandeep-sandhu/NewsLookout
license = GPL-3
keywords = Web-scraping, News, NLP, Information-Retrieval, crawler
platforms = Operating System :: MacOS :: MacOS X, Operating System :: Microsoft :: Windows, Operating System :: POSIX
classifiers = Development Status :: 5 - Production/Stable, Environment :: Console, Environment :: No Input/Output (Daemon), Intended Audience :: Financial and Insurance Industry, Operating System :: OS Independent, Programming Language :: Python :: 3 :: Only, Topic :: Internet :: WWW/HTTP :: Indexing/Search

[options]
packages = NewsLookout, NewsLookout.plugins
include_package_data = True
install_requires = 
	newspaper3k
	beautifulsoup4
	nltk
	requests
	tqdm
	pandas
	numpy

[options.entry_points]
console_scripts = main = NewsLookout:main
